accelerated-domains: add hswatersupply.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41735,6 +41735,7 @@ server=/hstypay.com/114.114.114.114
 server=/hstyre.com/114.114.114.114
 server=/hsutimes.com/114.114.114.114
 server=/hsuyeung.com/114.114.114.114
+server=/hswatersupply.com/114.114.114.114
 server=/hsweb.me/114.114.114.114
 server=/hswkzy.com/114.114.114.114
 server=/hswmb.com/114.114.114.114
