accelerated-domains: add grfexpo.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34395,6 +34395,7 @@ server=/greyli.com/114.114.114.114
 server=/greywolfcdn.net/114.114.114.114
 server=/greywolffast.com/114.114.114.114
 server=/greywolfns.com/114.114.114.114
+server=/grfexpo.com/114.114.114.114
 server=/grfyw.com/114.114.114.114
 server=/grg2013.com/114.114.114.114
 server=/grgaoren.com/114.114.114.114
