--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40096,6 +40096,7 @@ server=/hhytm.com/114.114.114.114
 server=/hhyungu.com/114.114.114.114
 server=/hhyy.com/114.114.114.114
 server=/hhyy100.com/114.114.114.114
+server=/hhzls.com/114.114.114.114
 server=/hhzm88.com/114.114.114.114
 server=/hhzyjng.com/114.114.114.114
 server=/hi-54.com/114.114.114.114
