--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43468,6 +43468,7 @@ server=/hzsh666.com/114.114.114.114
 server=/hzshanjie.com/114.114.114.114
 server=/hzshudian.com/114.114.114.114
 server=/hzslgzx.com/114.114.114.114
+server=/hzsource.com/114.114.114.114
 server=/hzsqhb.com/114.114.114.114
 server=/hzstad88.com/114.114.114.114
 server=/hzstar.com/114.114.114.114
