accelerated-domains: add yiduwater.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91799,6 +91799,7 @@ server=/yidulive.com/114.114.114.114
 server=/yidumen.com/114.114.114.114
 server=/yidun.com/114.114.114.114
 server=/yiduoxinya.com/114.114.114.114
+server=/yiduwater.com/114.114.114.114
 server=/yiernews.com/114.114.114.114
 server=/yieryouxin.com/114.114.114.114
 server=/yiexi.com/114.114.114.114
