--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34907,6 +34907,7 @@ server=/guideofsh.com/114.114.114.114
 server=/guiderank-app.com/114.114.114.114
 server=/guiderank.org/114.114.114.114
 server=/guifan.cc/114.114.114.114
+server=/guifancha.com/114.114.114.114
 server=/guifanku.com/114.114.114.114
 server=/guifeng.net/114.114.114.114
 server=/guifudi.com/114.114.114.114
