--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73200,6 +73200,7 @@ server=/shwilling.com/114.114.114.114
 server=/shwkwai.com/114.114.114.114
 server=/shwoody.com/114.114.114.114
 server=/shwpbbs.com/114.114.114.114
+server=/shwpg.com/114.114.114.114
 server=/shws.org/114.114.114.114
 server=/shwsg.net/114.114.114.114
 server=/shwszdh.com/114.114.114.114
