accelerated-domains: add lsswjt.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55565,6 +55565,7 @@ server=/lsrbs.net/114.114.114.114
 server=/lsrmyy.com/114.114.114.114
 server=/lssggzy.com/114.114.114.114
 server=/lssjt.com/114.114.114.114
+server=/lsswjt.com/114.114.114.114
 server=/lsszgh.com/114.114.114.114
 server=/lst1000.com/114.114.114.114
 server=/lstazl.com/114.114.114.114
