--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89925,6 +89925,7 @@ server=/xueshu.com/114.114.114.114
 server=/xueshu5.com/114.114.114.114
 server=/xueshuda.com/114.114.114.114
 server=/xueshujia.com/114.114.114.114
+server=/xueshut.com/114.114.114.114
 server=/xuesidaojiajiao.com/114.114.114.114
 server=/xuesongshuwood.com/114.114.114.114
 server=/xuesw.com/114.114.114.114
