--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42537,6 +42537,7 @@ server=/huinongtx.com/114.114.114.114
 server=/huion.com/114.114.114.114
 server=/huiqia.net/114.114.114.114
 server=/huiqianfan.com/114.114.114.114
+server=/huiqiyidiantong.com/114.114.114.114
 server=/huiqiyu.com/114.114.114.114
 server=/huiqk.com/114.114.114.114
 server=/huiqudsp.com/114.114.114.114
