--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21595,6 +21595,7 @@ server=/cnkuai.com/114.114.114.114
 server=/cnky.net/114.114.114.114
 server=/cnlang.org/114.114.114.114
 server=/cnlaw.net/114.114.114.114
+server=/cnlawweb.net/114.114.114.114
 server=/cnldzc.com/114.114.114.114
 server=/cnledw.com/114.114.114.114
 server=/cnlianjie.com/114.114.114.114
