--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30931,6 +30931,7 @@ server=/flowever.net/114.114.114.114
 server=/flowinnglobal.com/114.114.114.114
 server=/flowlbkj.com/114.114.114.114
 server=/flowportal.com/114.114.114.114
+server=/flowtechgd.com/114.114.114.114
 server=/flowtechsh.com/114.114.114.114
 server=/flpsz.com/114.114.114.114
 server=/flpwb.com/114.114.114.114
