accelerated-domains: add fyzls.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31939,6 +31939,7 @@ server=/fyydnz.cc/114.114.114.114
 server=/fyyy.com/114.114.114.114
 server=/fyyyc.com/114.114.114.114
 server=/fyzku.com/114.114.114.114
+server=/fyzls.com/114.114.114.114
 server=/fz-aefi.com/114.114.114.114
 server=/fz0752.com/114.114.114.114
 server=/fz222.com/114.114.114.114
