--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75842,6 +75842,7 @@ server=/supoin.com/114.114.114.114
 server=/supool.com/114.114.114.114
 server=/supor.com/114.114.114.114
 server=/supplierlist.com/114.114.114.114
+server=/supplywater.com/114.114.114.114
 server=/support-cn.samsung.com/114.114.114.114
 server=/support.lenovo.com/114.114.114.114
 server=/supuvalve.com/114.114.114.114
