--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81171,6 +81171,7 @@ server=/unistc.com/114.114.114.114
 server=/unistrument.com/114.114.114.114
 server=/uniswdc.com/114.114.114.114
 server=/unitconverter.cc/114.114.114.114
+server=/united-sqwater.com/114.114.114.114
 server=/united-water.com/114.114.114.114
 server=/unitedbank.ltd/114.114.114.114
 server=/unitedmoney.com/114.114.114.114
