accelerated-domains: add gdwsa.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32707,6 +32707,7 @@ server=/gdwdtz.com/114.114.114.114
 server=/gdwlcloud.com/114.114.114.114
 server=/gdwld.com/114.114.114.114
 server=/gdwlife.com/114.114.114.114
+server=/gdwsa.com/114.114.114.114
 server=/gdwse.com/114.114.114.114
 server=/gdwxyf.com/114.114.114.114
 server=/gdxfl.com/114.114.114.114
