accelerated-domains: add pv001.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -65772,6 +65772,7 @@ server=/puyimed.com/114.114.114.114
 server=/puyuan-electric.com/114.114.114.114
 server=/puzeyf.com/114.114.114.114
 server=/puzzles100.com/114.114.114.114
+server=/pv001.com/114.114.114.114
 server=/pv001.net/114.114.114.114
 server=/pv138.com/114.114.114.114
 server=/pv4b.com/114.114.114.114
