--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37535,6 +37535,7 @@ server=/gzcjjs.com/114.114.114.114
 server=/gzcl999.com/114.114.114.114
 server=/gzcn.net/114.114.114.114
 server=/gzcppa.com/114.114.114.114
+server=/gzcsgs.com/114.114.114.114
 server=/gzcxhd.com/114.114.114.114
 server=/gzcycling.com/114.114.114.114
 server=/gzdai.com/114.114.114.114
