accelerated-domains: add sinsche.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73645,6 +73645,7 @@ server=/sinozoc-ex.com/114.114.114.114
 server=/sinreweb.com/114.114.114.114
 server=/sinrey.com/114.114.114.114
 server=/sinsam.com/114.114.114.114
+server=/sinsche.com/114.114.114.114
 server=/sintaytour.com/114.114.114.114
 server=/sintien.com/114.114.114.114
 server=/sintoacct.com/114.114.114.114
