--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73179,6 +73179,7 @@ server=/shuxinyc.com/114.114.114.114
 server=/shuxinyi.net/114.114.114.114
 server=/shuxuehua.com/114.114.114.114
 server=/shuxuejingwei.com/114.114.114.114
+server=/shuxueyingyong.com/114.114.114.114
 server=/shuya-china.com/114.114.114.114
 server=/shuyan-biotech.com/114.114.114.114
 server=/shuyangba.com/114.114.114.114
