accelerated-domains: add tianquangs.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78421,6 +78421,7 @@ server=/tianqiyubao4.com/114.114.114.114
 server=/tianqiyubao7.com/114.114.114.114
 server=/tianqiyubao9.com/114.114.114.114
 server=/tianqizhixin.com/114.114.114.114
+server=/tianquangs.com/114.114.114.114
 server=/tianquetech.com/114.114.114.114
 server=/tianqunnet.com/114.114.114.114
 server=/tianrkl.com/114.114.114.114
