--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -95057,6 +95057,7 @@ server=/yyzdjd.com/114.114.114.114
 server=/yyzdm.com/114.114.114.114
 server=/yyzf.com/114.114.114.114
 server=/yyzf.vip/114.114.114.114
+server=/yyzls.com/114.114.114.114
 server=/yyzsoft.com/114.114.114.114
 server=/yyzw.com/114.114.114.114
 server=/yyzxcj.com/114.114.114.114
