accelerated-domains: add scslfd.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70677,6 +70677,7 @@ server=/scsdzzx.com/114.114.114.114
 server=/scshzx.com/114.114.114.114
 server=/scsjnxh.org/114.114.114.114
 server=/scsjsd.com/114.114.114.114
+server=/scslfd.com/114.114.114.114
 server=/scsltjt.com/114.114.114.114
 server=/scsmzy.com/114.114.114.114
 server=/scsntv.com/114.114.114.114
