--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74094,6 +74094,7 @@ server=/smartermicro.com/114.114.114.114
 server=/smartgaga.com/114.114.114.114
 server=/smarthey.com/114.114.114.114
 server=/smarthomecn.com/114.114.114.114
+server=/smarthuayan.com/114.114.114.114
 server=/smartisan.com/114.114.114.114
 server=/smartisanos.com/114.114.114.114
 server=/smartisantv.com/114.114.114.114
