accelerated-domains: add coyis.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22379,6 +22379,7 @@ server=/cowlevel.net/114.114.114.114
 server=/cowm199.com/114.114.114.114
 server=/cowrycare.com/114.114.114.114
 server=/cowtransfer.com/114.114.114.114
+server=/coyis.com/114.114.114.114
 server=/coyotebio-lab.com/114.114.114.114
 server=/coyuk.com/114.114.114.114
 server=/coyuns.net/114.114.114.114
