accelerated-domains: add jxszsj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50036,6 +50036,7 @@ server=/jxsuji.com/114.114.114.114
 server=/jxswzjx.com/114.114.114.114
 server=/jxsxdp.com/114.114.114.114
 server=/jxszlfl.com/114.114.114.114
+server=/jxszsj.com/114.114.114.114
 server=/jxszxyjhyy.com/114.114.114.114
 server=/jxt1314.com/114.114.114.114
 server=/jxt189.com/114.114.114.114
