accelerated-domains: add jilinshuiwu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -47661,6 +47661,7 @@ server=/jiliguala.com/114.114.114.114
 server=/jilingames.com/114.114.114.114
 server=/jilingwy.org/114.114.114.114
 server=/jilinmarathon.com/114.114.114.114
+server=/jilinshuiwu.com/114.114.114.114
 server=/jilinwula.com/114.114.114.114
 server=/jilinxiangyun.com/114.114.114.114
 server=/jiliw.com/114.114.114.114
