accelerated-domains: add derunss.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24878,6 +24878,7 @@ server=/dercase.com/114.114.114.114
 server=/derekchou.com/114.114.114.114
 server=/derenbs.com/114.114.114.114
 server=/derucci.com/114.114.114.114
+server=/derunss.com/114.114.114.114
 server=/deruxi.com/114.114.114.114
 server=/derzh.com/114.114.114.114
 server=/des8.com/114.114.114.114
