--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40922,6 +40922,7 @@ server=/hntchq.com/114.114.114.114
 server=/hntcmc.net/114.114.114.114
 server=/hnteacher.net/114.114.114.114
 server=/hntele.com/114.114.114.114
+server=/hnthrq.com/114.114.114.114
 server=/hntiannuo.net/114.114.114.114
 server=/hntianyue.com/114.114.114.114
 server=/hnticai.com/114.114.114.114
