accelerated-domains: add tcwt.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77663,6 +77663,7 @@ server=/tctpwebankcdn.net/114.114.114.114
 server=/tctpxwebank.com/114.114.114.114
 server=/tctran.com/114.114.114.114
 server=/tcwcs.com/114.114.114.114
+server=/tcwt.net/114.114.114.114
 server=/tcxfjc.com/114.114.114.114
 server=/tcxw.cc/114.114.114.114
 server=/tcxwg.com/114.114.114.114
