accelerated-domains: add ynsst.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92934,6 +92934,7 @@ server=/ynsjg.com/114.114.114.114
 server=/ynsnjt.com/114.114.114.114
 server=/ynsnw.com/114.114.114.114
 server=/ynsrx.com/114.114.114.114
+server=/ynsst.com/114.114.114.114
 server=/ynstl.com/114.114.114.114
 server=/ynsxjr.com/114.114.114.114
 server=/ynsydwzp.com/114.114.114.114
