accelerated-domains: add sulaixue.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75594,6 +75594,7 @@ server=/sukoshi.xyz/114.114.114.114
 server=/sukoutu.com/114.114.114.114
 server=/sukvm.com/114.114.114.114
 server=/sulabs.net/114.114.114.114
+server=/sulaixue.com/114.114.114.114
 server=/sulandscape.com/114.114.114.114
 server=/suleapi.com/114.114.114.114
 server=/suliaodingzhi.com/114.114.114.114
