accelerated-domains: add iwhr.org

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46158,6 +46158,7 @@ server=/iwewin.net/114.114.114.114
 server=/iwgame.com/114.114.114.114
 server=/iwhalecloud.com/114.114.114.114
 server=/iwhr.com/114.114.114.114
+server=/iwhr.org/114.114.114.114
 server=/iwin10.cc/114.114.114.114
 server=/iwin10.net/114.114.114.114
 server=/iwingchina.com/114.114.114.114
