accelerated-domains: add jsgclaw.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49188,6 +49188,7 @@ server=/jsgbds.com/114.114.114.114
 server=/jsgc.com/114.114.114.114
 server=/jsgc168.com/114.114.114.114
 server=/jsgcbank.com/114.114.114.114
+server=/jsgclaw.com/114.114.114.114
 server=/jsgdsb.com/114.114.114.114
 server=/jsggwhy.com/114.114.114.114
 server=/jsgh.org/114.114.114.114
