--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23000,6 +23000,7 @@ server=/cssbkj.com/114.114.114.114
 server=/cssbyy.com/114.114.114.114
 server=/csscmall.com/114.114.114.114
 server=/csseplastic.com/114.114.114.114
+server=/cssf.cc/114.114.114.114
 server=/cssf.com/114.114.114.114
 server=/cssf.net/114.114.114.114
 server=/cssforest.org/114.114.114.114
