accelerated-domains: add thingskit.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78233,6 +78233,7 @@ server=/thiemechina.com/114.114.114.114
 server=/thinbug.com/114.114.114.114
 server=/thingclub.com/114.114.114.114
 server=/thingjs.com/114.114.114.114
+server=/thingskit.com/114.114.114.114
 server=/think-mall.com/114.114.114.114
 server=/thinkcloudlab.com/114.114.114.114
 server=/thinkcmf.com/114.114.114.114
