--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75250,6 +75250,7 @@ server=/startup-partner.com/114.114.114.114
 server=/starwarschina.com/114.114.114.114
 server=/starway.net/114.114.114.114
 server=/starworldgames.com/114.114.114.114
+server=/starwsn.com/114.114.114.114
 server=/starxiiient.com/114.114.114.114
 server=/starxn.com/114.114.114.114
 server=/staryea.com/114.114.114.114
