--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23055,6 +23055,7 @@ server=/csxww.com/114.114.114.114
 server=/csy17.com/114.114.114.114
 server=/csyestar.com/114.114.114.114
 server=/csyhsy.com/114.114.114.114
+server=/csykgs.com/114.114.114.114
 server=/csylk.com/114.114.114.114
 server=/csyrtcs.com/114.114.114.114
 server=/csytv.com/114.114.114.114
