--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -64331,6 +64331,7 @@ server=/pdty123.com/114.114.114.114
 server=/pduoduo.vip/114.114.114.114
 server=/pdvisa.com/114.114.114.114
 server=/pdxx.net/114.114.114.114
+server=/pdzls.com/114.114.114.114
 server=/pe-exhibition.com/114.114.114.114
 server=/pe.vc/114.114.114.114
 server=/pe2022.com/114.114.114.114
