accelerated-domains: add hjwsxzz.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40452,6 +40452,7 @@ server=/hjunkel.com/114.114.114.114
 server=/hjw169.com/114.114.114.114
 server=/hjw68.com/114.114.114.114
 server=/hjwsky.com/114.114.114.114
+server=/hjwsxzz.com/114.114.114.114
 server=/hjwxcps.com/114.114.114.114
 server=/hjxhg.com/114.114.114.114
 server=/hjxsjx.com/114.114.114.114
