accelerated-domains: add zhiyuyg.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96795,6 +96795,7 @@ server=/zhiyun-tech.com/114.114.114.114
 server=/zhiyungc.com/114.114.114.114
 server=/zhiyunwang.net/114.114.114.114
 server=/zhiyutianqi.com/114.114.114.114
+server=/zhiyuyg.com/114.114.114.114
 server=/zhizaoyun.com/114.114.114.114
 server=/zhizhan360.com/114.114.114.114
 server=/zhizhang.com/114.114.114.114
