accelerated-domains: add lysksw.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -56257,6 +56257,7 @@ server=/lyshark.com/114.114.114.114
 server=/lyshenglu.com/114.114.114.114
 server=/lyshengwu.com/114.114.114.114
 server=/lysk.net/114.114.114.114
+server=/lysksw.com/114.114.114.114
 server=/lyskx.net/114.114.114.114
 server=/lysqzs.com/114.114.114.114
 server=/lysswjt.com/114.114.114.114
