accelerated-domains: add qilinshuixiang.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66714,6 +66714,7 @@ server=/qiliangjia.com/114.114.114.114
 server=/qiliaokj.com/114.114.114.114
 server=/qilindao.com/114.114.114.114
 server=/qiling.org/114.114.114.114
+server=/qilinshuixiang.com/114.114.114.114
 server=/qilinxuan.net/114.114.114.114
 server=/qilinyiqi88.com/114.114.114.114
 server=/qilitech.ltd/114.114.114.114
