accelerated-domains: add whcdwater.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84460,6 +84460,7 @@ server=/whcbs.com/114.114.114.114
 server=/whccb.com/114.114.114.114
 server=/whcch802.com/114.114.114.114
 server=/whcdc.org/114.114.114.114
+server=/whcdwater.com/114.114.114.114
 server=/whcfs.org/114.114.114.114
 server=/whcgtx.com/114.114.114.114
 server=/whchip.com/114.114.114.114
