accelerated-domains: add siloon.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73438,6 +73438,7 @@ server=/silkroadtechnologies.com/114.114.114.114
 server=/silksong.me/114.114.114.114
 server=/silktrek.com/114.114.114.114
 server=/sillydong.com/114.114.114.114
+server=/siloon.com/114.114.114.114
 server=/silucar.com/114.114.114.114
 server=/silucg.com/114.114.114.114
 server=/siludao.com/114.114.114.114
