accelerated-domains: add suntront.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75763,6 +75763,7 @@ server=/suntimehousehold.com/114.114.114.114
 server=/suntop168.com/114.114.114.114
 server=/suntray.com/114.114.114.114
 server=/suntrayoa.com/114.114.114.114
+server=/suntront.com/114.114.114.114
 server=/sunup3d.com/114.114.114.114
 server=/sunupcg.com/114.114.114.114
 server=/sunus-china.com/114.114.114.114
