--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -95142,6 +95142,7 @@ server=/yziin.com/114.114.114.114
 server=/yzimgs.com/114.114.114.114
 server=/yzinter.com/114.114.114.114
 server=/yzitc.com/114.114.114.114
+server=/yzj.cc/114.114.114.114
 server=/yzja.com/114.114.114.114
 server=/yzjdgs88.com/114.114.114.114
 server=/yzjjw.net/114.114.114.114
