--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41539,6 +41539,7 @@ server=/hqfastner.com/114.114.114.114
 server=/hqgjzz.com/114.114.114.114
 server=/hqgq.com/114.114.114.114
 server=/hqh5.com/114.114.114.114
+server=/hqhb.com/114.114.114.114
 server=/hqhl.net/114.114.114.114
 server=/hqhot.com/114.114.114.114
 server=/hqidi.com/114.114.114.114
