accelerated-domains: add i3vsoft.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43629,6 +43629,7 @@ server=/i3dpworld.com/114.114.114.114
 server=/i3geek.com/114.114.114.114
 server=/i3gt.com/114.114.114.114
 server=/i3smot.com/114.114.114.114
+server=/i3vsoft.com/114.114.114.114
 server=/i3yuan.com/114.114.114.114
 server=/i3z.cc/114.114.114.114
 server=/i4px.com/114.114.114.114
