--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24278,6 +24278,7 @@ server=/data380.com/114.114.114.114
 server=/data4h.com/114.114.114.114
 server=/data5u.com/114.114.114.114
 server=/data86.com/114.114.114.114
+server=/data86.net/114.114.114.114
 server=/data985.com/114.114.114.114
 server=/datacaciques.com/114.114.114.114
 server=/datacanvas.com/114.114.114.114
