accelerated-domains: add ic-mag.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43827,6 +43827,7 @@ server=/ibytedapm.com/114.114.114.114
 server=/ic-captain.com/114.114.114.114
 server=/ic-king.com/114.114.114.114
 server=/ic-ldo.com/114.114.114.114
+server=/ic-mag.com/114.114.114.114
 server=/ic-valley.com/114.114.114.114
 server=/ic.work/114.114.114.114
 server=/ic2china.com/114.114.114.114
