accelerated-domains: add water8848.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83378,6 +83378,7 @@ server=/watchtraveler.com/114.114.114.114
 server=/watchwxfw.com/114.114.114.114
 server=/watchzb.com/114.114.114.114
 server=/water520.com/114.114.114.114
+server=/water8848.com/114.114.114.114
 server=/waterdropfilter.com/114.114.114.114
 server=/waterenping.com/114.114.114.114
 server=/waterfallguilin.com/114.114.114.114
