accelerated-domains: add zbxjgs.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -95446,6 +95446,7 @@ server=/zbwdj.com/114.114.114.114
 server=/zbwg.cc/114.114.114.114
 server=/zbxcck.com/114.114.114.114
 server=/zbxinmeiti.com/114.114.114.114
+server=/zbxjgs.com/114.114.114.114
 server=/zbxsoft.com/114.114.114.114
 server=/zbxyh.com/114.114.114.114
 server=/zbxyly.com/114.114.114.114
