accelerated-domains: add htood.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41863,6 +41863,7 @@ server=/htmycn.com/114.114.114.114
 server=/htnice.com/114.114.114.114
 server=/htong.com/114.114.114.114
 server=/htoo.vip/114.114.114.114
+server=/htood.com/114.114.114.114
 server=/htool.com/114.114.114.114
 server=/htper.com/114.114.114.114
 server=/htqyy.com/114.114.114.114
