--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98062,6 +98062,7 @@ server=/zlfshop.com/114.114.114.114
 server=/zlfzyj.com/114.114.114.114
 server=/zlg.com/114.114.114.114
 server=/zlgcgl.com/114.114.114.114
+server=/zlglpt.com/114.114.114.114
 server=/zlgmcu.com/114.114.114.114
 server=/zlgpy.com/114.114.114.114
 server=/zlgsj.com/114.114.114.114
