--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66443,6 +66443,7 @@ server=/qianhai.com/114.114.114.114
 server=/qianhai12315.com/114.114.114.114
 server=/qianhaiaiaitie.com/114.114.114.114
 server=/qianhaibs.com/114.114.114.114
+server=/qianhaipower.com/114.114.114.114
 server=/qianhuajie.com/114.114.114.114
 server=/qianhuanhulian.com/114.114.114.114
 server=/qianhuaweb.com/114.114.114.114
