--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -65760,6 +65760,7 @@ server=/puresys.net/114.114.114.114
 server=/purewhite.io/114.114.114.114
 server=/puronglong.com/114.114.114.114
 server=/purplehi.com/114.114.114.114
+server=/purplelec.com/114.114.114.114
 server=/puruimachinery.com/114.114.114.114
 server=/pusa123.com/114.114.114.114
 server=/pusa365.com/114.114.114.114
