accelerated-domains: add knightli.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51507,6 +51507,7 @@ server=/knewone.com/114.114.114.114
 server=/knewsmart.com/114.114.114.114
 server=/kneyvz.xyz/114.114.114.114
 server=/knight-un.com/114.114.114.114
+server=/knightli.com/114.114.114.114
 server=/knightyoung.asia/114.114.114.114
 server=/kninebox.com/114.114.114.114
 server=/knnnd.com/114.114.114.114
