accelerated-domains: add jdianfei.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46749,6 +46749,7 @@ server=/jdhmediajd.com/114.114.114.114
 server=/jdhospital.com/114.114.114.114
 server=/jdhuafeng.com/114.114.114.114
 server=/jdhyplay.com/114.114.114.114
+server=/jdianfei.com/114.114.114.114
 server=/jdindustry.com/114.114.114.114
 server=/jdis.org/114.114.114.114
 server=/jdiy.club/114.114.114.114
