accelerated-domains: add usbzl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -81433,6 +81433,7 @@ server=/usb166.com/114.114.114.114
 server=/usbing.com/114.114.114.114
 server=/usbmi.com/114.114.114.114
 server=/usbzh.com/114.114.114.114
+server=/usbzl.com/114.114.114.114
 server=/uschinagreenfund.com/114.114.114.114
 server=/uscnk.com/114.114.114.114
 server=/usdcny.net/114.114.114.114
