--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -95116,6 +95116,7 @@ server=/yz360.cc/114.114.114.114
 server=/yz3c.com/114.114.114.114
 server=/yz4l.com/114.114.114.114
 server=/yz99999.com/114.114.114.114
+server=/yzajz.com/114.114.114.114
 server=/yzbank.com/114.114.114.114
 server=/yzbo.tv/114.114.114.114
 server=/yzbpro.com/114.114.114.114
