accelerated-domains: add hzmctech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43449,6 +43449,7 @@ server=/hzmama.net/114.114.114.114
 server=/hzman.net/114.114.114.114
 server=/hzmantu.com/114.114.114.114
 server=/hzmba.com/114.114.114.114
+server=/hzmctech.com/114.114.114.114
 server=/hzmdcnc.com/114.114.114.114
 server=/hzmogo.com/114.114.114.114
 server=/hzmxkj.net/114.114.114.114
