accelerated-domains: add zzptech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99247,6 +99247,7 @@ server=/zzms.com/114.114.114.114
 server=/zzmy.net/114.114.114.114
 server=/zzmyt.com/114.114.114.114
 server=/zznah001.com/114.114.114.114
+server=/zzptech.com/114.114.114.114
 server=/zzpuke.com/114.114.114.114
 server=/zzqfte.com/114.114.114.114
 server=/zzqiyou.com/114.114.114.114
