--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37632,6 +37632,7 @@ server=/gzjtjx.com/114.114.114.114
 server=/gzjtjy.com/114.114.114.114
 server=/gzjunyu.com/114.114.114.114
 server=/gzjuqi.com/114.114.114.114
+server=/gzjvcom.com/114.114.114.114
 server=/gzjykj.com/114.114.114.114
 server=/gzjyypt.com/114.114.114.114
 server=/gzjzc.com/114.114.114.114
