accelerated-domains: add ncepujournal.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60721,6 +60721,7 @@ server=/ncboo.com/114.114.114.114
 server=/nccqj.com/114.114.114.114
 server=/ncderuida.com/114.114.114.114
 server=/ncdxbbs.com/114.114.114.114
+server=/ncepujournal.com/114.114.114.114
 server=/ncfcsa.org/114.114.114.114
 server=/ncfgroup.com/114.114.114.114
 server=/ncfimg.com/114.114.114.114
