accelerated-domains: add lygsgt.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -56227,6 +56227,7 @@ server=/lygou.cc/114.114.114.114
 server=/lygrffw.com/114.114.114.114
 server=/lygrtm.com/114.114.114.114
 server=/lygscjs.com/114.114.114.114
+server=/lygsgt.com/114.114.114.114
 server=/lygtravel.com/114.114.114.114
 server=/lygyyjt.com/114.114.114.114
 server=/lyh8888.com/114.114.114.114
