--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49500,6 +49500,7 @@ server=/jtlw.com/114.114.114.114
 server=/jtlzx.com/114.114.114.114
 server=/jtm-food.com/114.114.114.114
 server=/jtm.pub/114.114.114.114
+server=/jtn.com/114.114.114.114
 server=/jtnlk.com/114.114.114.114
 server=/jtnsh.com/114.114.114.114
 server=/jtpipeline.com/114.114.114.114
