accelerated-domains: add hangjianet.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38264,6 +38264,7 @@ server=/hanghaimeng.com/114.114.114.114
 server=/hanghang.com/114.114.114.114
 server=/hanghangcha.com/114.114.114.114
 server=/hanghangohye.com/114.114.114.114
+server=/hangjianet.com/114.114.114.114
 server=/hangjiayun.com/114.114.114.114
 server=/hangjizulin.com/114.114.114.114
 server=/hangkong.com/114.114.114.114
