--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37609,6 +37609,7 @@ server=/gzhttp.com/114.114.114.114
 server=/gzhuake.cc/114.114.114.114
 server=/gzhuayan.com/114.114.114.114
 server=/gzhuiwan.com/114.114.114.114
+server=/gzhxaq.com/114.114.114.114
 server=/gzhygk.com/114.114.114.114
 server=/gzhysy.com/114.114.114.114
 server=/gzhzcj.com/114.114.114.114
