accelerated-domains: add zhenkongbang.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96464,6 +96464,7 @@ server=/zhenimg.com/114.114.114.114
 server=/zhenjiang-marathon.com/114.114.114.114
 server=/zhenjiatong.com/114.114.114.114
 server=/zhenjingtv.com/114.114.114.114
+server=/zhenkongbang.com/114.114.114.114
 server=/zhenleishan.com/114.114.114.114
 server=/zhenlingjituan.com/114.114.114.114
 server=/zhenlongauto.com/114.114.114.114
