--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39953,6 +39953,7 @@ server=/hflz.com/114.114.114.114
 server=/hfmama.com/114.114.114.114
 server=/hfmoney.com/114.114.114.114
 server=/hfmt.net/114.114.114.114
+server=/hfmxs.com/114.114.114.114
 server=/hfningdu.com/114.114.114.114
 server=/hfnuola.com/114.114.114.114
 server=/hfoj.net/114.114.114.114
