--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84124,6 +84124,7 @@ server=/wemorefun.com/114.114.114.114
 server=/wemvp.com/114.114.114.114
 server=/wenancehua.com/114.114.114.114
 server=/wenancn.com/114.114.114.114
+server=/wenandaquan.com/114.114.114.114
 server=/wenangou.com/114.114.114.114
 server=/wenanzhe.com/114.114.114.114
 server=/wenbo.cc/114.114.114.114
