--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -95862,6 +95862,7 @@ server=/zggzgg.com/114.114.114.114
 server=/zgh.com/114.114.114.114
 server=/zghangzhan.com/114.114.114.114
 server=/zghaojiaoyu.com/114.114.114.114
+server=/zghaopingche.com/114.114.114.114
 server=/zghctc.com/114.114.114.114
 server=/zghdch.com/114.114.114.114
 server=/zghde.com/114.114.114.114
