--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96869,6 +96869,7 @@ server=/zhizuotu.com/114.114.114.114
 server=/zhj9.com/114.114.114.114
 server=/zhjdkz.com/114.114.114.114
 server=/zhjiameng.com/114.114.114.114
+server=/zhjianet.com/114.114.114.114
 server=/zhjj.org/114.114.114.114
 server=/zhjncb.com/114.114.114.114
 server=/zhjp.net/114.114.114.114
