accelerated-domains: add sichuanbojiesports.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73377,6 +73377,7 @@ server=/sicheng.net/114.114.114.114
 server=/sicher-elevator.com/114.114.114.114
 server=/sichuan163.com/114.114.114.114
 server=/sichuanair.com/114.114.114.114
+server=/sichuanbojiesports.com/114.114.114.114
 server=/sichuancancer.org/114.114.114.114
 server=/sichuangwy.org/114.114.114.114
 server=/sichuanmianning.com/114.114.114.114
