--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61775,6 +61775,7 @@ server=/nmgjdxy.com/114.114.114.114
 server=/nmgjkmc.com/114.114.114.114
 server=/nmgjyzh.com/114.114.114.114
 server=/nmglawyer.com/114.114.114.114
+server=/nmgmarathon.com/114.114.114.114
 server=/nmgmzys.com/114.114.114.114
 server=/nmgswkj.com/114.114.114.114
 server=/nmgup.com/114.114.114.114
