accelerated-domains: add wanzhoumls.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83334,6 +83334,7 @@ server=/wanyuproperty.com/114.114.114.114
 server=/wanyuwang.com/114.114.114.114
 server=/wanzcm.com/114.114.114.114
 server=/wanzhoujob.com/114.114.114.114
+server=/wanzhoumls.com/114.114.114.114
 server=/wanzhoumo.com/114.114.114.114
 server=/wanzhua.com/114.114.114.114
 server=/wanzhuang.com/114.114.114.114
