--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66326,6 +66326,7 @@ server=/qhch520.com/114.114.114.114
 server=/qhchcb.com/114.114.114.114
 server=/qhclass.com/114.114.114.114
 server=/qhcswhh.com/114.114.114.114
+server=/qhd-marathon.com/114.114.114.114
 server=/qhd.net/114.114.114.114
 server=/qhdatongnews.com/114.114.114.114
 server=/qhdcm.com/114.114.114.114
