--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77193,6 +77193,7 @@ server=/tailixiangjiao.com/114.114.114.114
 server=/tailixlq.com/114.114.114.114
 server=/taillkang.com/114.114.114.114
 server=/taimi100.com/114.114.114.114
+server=/taimls.com/114.114.114.114
 server=/tainengchong.com/114.114.114.114
 server=/tainingrencai.com/114.114.114.114
 server=/taiorient.com/114.114.114.114
