accelerated-domains: add xiantao-marathon.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87484,6 +87484,7 @@ server=/xianshua.net/114.114.114.114
 server=/xianshuabao.com/114.114.114.114
 server=/xianshufang.com/114.114.114.114
 server=/xiansimo.com/114.114.114.114
+server=/xiantao-marathon.com/114.114.114.114
 server=/xianwucloud.com/114.114.114.114
 server=/xianxiadao.com/114.114.114.114
 server=/xianxiadao.net/114.114.114.114
