--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -47937,6 +47937,7 @@ server=/jinianbi.com/114.114.114.114
 server=/jinianbishequ.com/114.114.114.114
 server=/jiniance8.com/114.114.114.114
 server=/jiningjj.com/114.114.114.114
+server=/jiningmarathon.com/114.114.114.114
 server=/jiniu.work/114.114.114.114
 server=/jiniutech.com/114.114.114.114
 server=/jinjiang-group.com/114.114.114.114
