--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54446,6 +54446,7 @@ server=/linpx.com/114.114.114.114
 server=/linqijin.com/114.114.114.114
 server=/linquan.info/114.114.114.114
 server=/linqujob.com/114.114.114.114
+server=/linqumarathon.com/114.114.114.114
 server=/linruanwangluo.com/114.114.114.114
 server=/lins-bros.com/114.114.114.114
 server=/linshang.com/114.114.114.114
