accelerated-domains: add suzhoucitymarathon.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75966,6 +75966,7 @@ server=/suzhou-marathon.com/114.114.114.114
 server=/suzhou-otsuka.com/114.114.114.114
 server=/suzhoubank.com/114.114.114.114
 server=/suzhoubeili.com/114.114.114.114
+server=/suzhoucitymarathon.com/114.114.114.114
 server=/suzhouds.com/114.114.114.114
 server=/suzhoufashion.com/114.114.114.114
 server=/suzhouhengtai.com/114.114.114.114
