--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40341,6 +40341,7 @@ server=/hiroop.com/114.114.114.114
 server=/hirosspac.com/114.114.114.114
 server=/hirossz.com/114.114.114.114
 server=/hirtk.com/114.114.114.114
+server=/hirunsport.com/114.114.114.114
 server=/his.sh/114.114.114.114
 server=/his2nd.life/114.114.114.114
 server=/hisavana.com/114.114.114.114
