accelerated-domains: add msdpmarathon.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -59585,6 +59585,7 @@ server=/msdn.download.prss.microsoft.com/114.114.114.114
 server=/msdn.hk/114.114.114.114
 server=/msdn.im/114.114.114.114
 server=/msdnxitong.com/114.114.114.114
+server=/msdpmarathon.com/114.114.114.114
 server=/msdprod-ad.download.prss.microsoft.com/114.114.114.114
 server=/msfpay.com/114.114.114.114
 server=/msftonlinelab.com/114.114.114.114
