--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87447,6 +87447,7 @@ server=/xiangwushuo.com/114.114.114.114
 server=/xiangxiangmf.com/114.114.114.114
 server=/xiangxihe.com/114.114.114.114
 server=/xiangxingnet.com/114.114.114.114
+server=/xiangyang-marathon.com/114.114.114.114
 server=/xiangyang.net/114.114.114.114
 server=/xiangyiai.com/114.114.114.114
 server=/xiangyue.life/114.114.114.114
