--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -97502,6 +97502,7 @@ server=/zibll.com/114.114.114.114
 server=/ziboborui.com/114.114.114.114
 server=/ziboga.com/114.114.114.114
 server=/zibojinling.com/114.114.114.114
+server=/zibomarathon.com/114.114.114.114
 server=/zibonewbright.com/114.114.114.114
 server=/zibozhongxue.com/114.114.114.114
 server=/zichenit.com/114.114.114.114
