--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42015,6 +42015,7 @@ server=/huainanhy.com/114.114.114.114
 server=/huainannet.com/114.114.114.114
 server=/huainanren.net/114.114.114.114
 server=/huainet.com/114.114.114.114
+server=/huairougreatwallmarathon.com/114.114.114.114
 server=/huairtv.com/114.114.114.114
 server=/huairui59.com/114.114.114.114
 server=/huaixin88.com/114.114.114.114
