accelerated-domains: add huangshimarathon.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42116,6 +42116,7 @@ server=/huangniu.in/114.114.114.114
 server=/huangpucn.com/114.114.114.114
 server=/huangqi1688.com/114.114.114.114
 server=/huangshaotian.com/114.114.114.114
+server=/huangshimarathon.com/114.114.114.114
 server=/huangwei.me/114.114.114.114
 server=/huangwei.pro/114.114.114.114
 server=/huangxin.dev/114.114.114.114
