--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91883,6 +91883,7 @@ server=/yidontek.com/114.114.114.114
 server=/yidop.com/114.114.114.114
 server=/yidoutang.com/114.114.114.114
 server=/yidouzhaofang.com/114.114.114.114
+server=/yidu-marathon.com/114.114.114.114
 server=/yidu.cc/114.114.114.114
 server=/yidugo.com/114.114.114.114
 server=/yidui.me/114.114.114.114
