--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42601,6 +42601,7 @@ server=/huishuirencai.com/114.114.114.114
 server=/huisituo.com/114.114.114.114
 server=/huisky.com/114.114.114.114
 server=/huisou.com/114.114.114.114
+server=/huisports.com/114.114.114.114
 server=/huisuanzhang.com/114.114.114.114
 server=/huisuoping.com/114.114.114.114
 server=/huitao.net/114.114.114.114
