accelerated-domains: add nj-halfmarathon.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61446,6 +61446,7 @@ server=/nizkeyboard.com/114.114.114.114
 server=/nj-bl.com/114.114.114.114
 server=/nj-chishun.com/114.114.114.114
 server=/nj-gw.com/114.114.114.114
+server=/nj-halfmarathon.com/114.114.114.114
 server=/nj-huaqiang.com/114.114.114.114
 server=/nj-hust.com/114.114.114.114
 server=/nj-nanhuai.com/114.114.114.114
