--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39418,6 +39418,7 @@ server=/hebeizuqiu.net/114.114.114.114
 server=/hebetextile.com/114.114.114.114
 server=/hebgtjt.com/114.114.114.114
 server=/hebi99.com/114.114.114.114
+server=/hebimalasong.com/114.114.114.114
 server=/hebinhospital.com/114.114.114.114
 server=/hebisf.com/114.114.114.114
 server=/hebitv.com/114.114.114.114
