accelerated-domains: add luoyangmalasong.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55899,6 +55899,7 @@ server=/luoxudong.com/114.114.114.114
 server=/luoxue.com/114.114.114.114
 server=/luoyangdx.com/114.114.114.114
 server=/luoyangkeji.com/114.114.114.114
+server=/luoyangmalasong.com/114.114.114.114
 server=/luoyechenfei.com/114.114.114.114
 server=/luoying66.com/114.114.114.114
 server=/luoyingsh.com/114.114.114.114
