--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13803,6 +13803,7 @@ server=/beihuasoft.com/114.114.114.114
 server=/beihuo.net/114.114.114.114
 server=/beijing-chopard.com/114.114.114.114
 server=/beijing-girardperregaux.com/114.114.114.114
+server=/beijing-halfmarathon.com/114.114.114.114
 server=/beijing-hmo.com/114.114.114.114
 server=/beijing-hualian.com/114.114.114.114
 server=/beijing-kids.com/114.114.114.114
