--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83902,6 +83902,7 @@ server=/weilitoutiao.net/114.114.114.114
 server=/weiliwq.com/114.114.114.114
 server=/weilongshipin.com/114.114.114.114
 server=/weilt.net/114.114.114.114
+server=/weimaelectric.com/114.114.114.114
 server=/weimai.com/114.114.114.114
 server=/weimaitu.com/114.114.114.114
 server=/weimaqi.net/114.114.114.114
