accelerated-domains: add ippsport.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45545,6 +45545,7 @@ server=/ipoceo.com/114.114.114.114
 server=/iposeidongame.com/114.114.114.114
 server=/ipple.net/114.114.114.114
 server=/ipplus360.com/114.114.114.114
+server=/ippsport.com/114.114.114.114
 server=/ippzone.com/114.114.114.114
 server=/ipr114.net/114.114.114.114
 server=/ipr123.com/114.114.114.114
