--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29364,6 +29364,7 @@ server=/expowindow.com/114.114.114.114
 server=/expressboo.com/114.114.114.114
 server=/expresscompanynetwork.com/114.114.114.114
 server=/expreview.com/114.114.114.114
+server=/exprun.com/114.114.114.114
 server=/expsky.com/114.114.114.114
 server=/exsvc.net/114.114.114.114
 server=/ext2fsd.com/114.114.114.114
