--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -65958,6 +65958,7 @@ server=/pzjdimg.com/114.114.114.114
 server=/pzjiadian.com/114.114.114.114
 server=/pzlink.com/114.114.114.114
 server=/pzmlq.com/114.114.114.114
+server=/pzmls.com/114.114.114.114
 server=/pznews.com/114.114.114.114
 server=/pznrfsy.com/114.114.114.114
 server=/pznsh.com/114.114.114.114
