--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71834,6 +71834,7 @@ server=/shangyicanyin.com/114.114.114.114
 server=/shangyijs.com/114.114.114.114
 server=/shangyouxuan.com/114.114.114.114
 server=/shangyouze.com/114.114.114.114
+server=/shangyu-marathon.com/114.114.114.114
 server=/shangyuan.ltd/114.114.114.114
 server=/shangyubank.com/114.114.114.114
 server=/shangyuer.com/114.114.114.114
