accelerated-domains: add hjmarathon.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40463,6 +40463,7 @@ server=/hjkhjkl.com/114.114.114.114
 server=/hjkklj.com/114.114.114.114
 server=/hjksjx.com/114.114.114.114
 server=/hjlrw.com/114.114.114.114
+server=/hjmarathon.com/114.114.114.114
 server=/hjpp.net/114.114.114.114
 server=/hjr-exchange.com/114.114.114.114
 server=/hjren.com/114.114.114.114
