accelerated-domains: add sdtianjing.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71028,6 +71028,7 @@ server=/sdszszgcyxgs.com/114.114.114.114
 server=/sdtadm.com/114.114.114.114
 server=/sdtdata.com/114.114.114.114
 server=/sdteleiptv.com/114.114.114.114
+server=/sdtianjing.com/114.114.114.114
 server=/sdtlly.com/114.114.114.114
 server=/sdtrxx.com/114.114.114.114
 server=/sdtsrf.com/114.114.114.114
