accelerated-domains: add qd-mls.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66124,6 +66124,7 @@ server=/qcyoung.com/114.114.114.114
 server=/qczb.app/114.114.114.114
 server=/qczj.xyz/114.114.114.114
 server=/qd-metro.com/114.114.114.114
+server=/qd-mls.com/114.114.114.114
 server=/qd-weimob.com/114.114.114.114
 server=/qd.ink/114.114.114.114
 server=/qd256.com/114.114.114.114
