--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76430,6 +76430,7 @@ server=/sysjnl.com/114.114.114.114
 server=/sysmaster.online/114.114.114.114
 server=/sysmini.com/114.114.114.114
 server=/sysmk120.com/114.114.114.114
+server=/sysmls.com/114.114.114.114
 server=/sysnfj.com/114.114.114.114
 server=/sysokean.com/114.114.114.114
 server=/sysrsksy.com/114.114.114.114
