accelerated-domains: add lygxwmarathon.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -56253,6 +56253,7 @@ server=/lygrtm.com/114.114.114.114
 server=/lygscjs.com/114.114.114.114
 server=/lygsgt.com/114.114.114.114
 server=/lygtravel.com/114.114.114.114
+server=/lygxwmarathon.com/114.114.114.114
 server=/lygyyjt.com/114.114.114.114
 server=/lyh8888.com/114.114.114.114
 server=/lyhb88.com/114.114.114.114
