accelerated-domains: add gwmmarathon.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35293,6 +35293,7 @@ server=/gwkvepgc.com/114.114.114.114
 server=/gwm-global.com/114.114.114.114
 server=/gwmapp-h.com/114.114.114.114
 server=/gwmfc.com/114.114.114.114
+server=/gwmmarathon.com/114.114.114.114
 server=/gwmsoft.com/114.114.114.114
 server=/gwnz.com/114.114.114.114
 server=/gworg.com/114.114.114.114
