accelerated-domains: add lypb.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -56282,6 +56282,7 @@ server=/lynr.com/114.114.114.114
 server=/lyobs.com/114.114.114.114
 server=/lyou123.com/114.114.114.114
 server=/lyouoa.com/114.114.114.114
+server=/lypb.com/114.114.114.114
 server=/lypd.com/114.114.114.114
 server=/lypdl.com/114.114.114.114
 server=/lyplay.net/114.114.114.114
