--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83907,6 +83907,7 @@ server=/weilegetu.com/114.114.114.114
 server=/weilekuiming.com/114.114.114.114
 server=/weilenicetime.com/114.114.114.114
 server=/weileryiyt.com/114.114.114.114
+server=/weiliangsport.com/114.114.114.114
 server=/weilihealth.com/114.114.114.114
 server=/weiling520.com/114.114.114.114
 server=/weilingapp.com/114.114.114.114
