--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76382,6 +76382,7 @@ server=/sylmny.com/114.114.114.114
 server=/sylnyx.com/114.114.114.114
 server=/syltgl.com/114.114.114.114
 server=/symama.com/114.114.114.114
+server=/symarathon.com/114.114.114.114
 server=/symboltech.com/114.114.114.114
 server=/symboltek.com/114.114.114.114
 server=/symf-crm.com/114.114.114.114
