accelerated-domains: add zhuzhoumarathon.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -97471,6 +97471,7 @@ server=/zhuzher.com/114.114.114.114
 server=/zhuzhichao.com/114.114.114.114
 server=/zhuzhou.com/114.114.114.114
 server=/zhuzhoubus.com/114.114.114.114
+server=/zhuzhoumarathon.com/114.114.114.114
 server=/zhuzhouwang.com/114.114.114.114
 server=/zhuzhutown.com/114.114.114.114
 server=/zhuzi.me/114.114.114.114
