accelerated-domains: add nanning-marathon.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60510,6 +60510,7 @@ server=/nankaimba.org/114.114.114.114
 server=/nanlangshengwu.com/114.114.114.114
 server=/nanlew.com/114.114.114.114
 server=/nannanlv.com/114.114.114.114
+server=/nanning-marathon.com/114.114.114.114
 server=/nanninginfo.com/114.114.114.114
 server=/nanningmaidige.com/114.114.114.114
 server=/nanningmhw.com/114.114.114.114
