--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49315,6 +49315,7 @@ server=/jsldweb.com/114.114.114.114
 server=/jslegal.com/114.114.114.114
 server=/jslife.net/114.114.114.114
 server=/jslink.com/114.114.114.114
+server=/jslmarathon.com/114.114.114.114
 server=/jslottery.com/114.114.114.114
 server=/jslpk.com/114.114.114.114
 server=/jslvzhigu.com/114.114.114.114
