accelerated-domains: add wxredian.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86409,6 +86409,7 @@ server=/wxqcgc.com/114.114.114.114
 server=/wxqinxue.com/114.114.114.114
 server=/wxqxbxg.com/114.114.114.114
 server=/wxrb.com/114.114.114.114
+server=/wxredian.com/114.114.114.114
 server=/wxrrd.com/114.114.114.114
 server=/wxsbank.com/114.114.114.114
 server=/wxsbkj.com/114.114.114.114
