--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -47747,6 +47747,7 @@ server=/jimuyk.com/114.114.114.114
 server=/jin-huang.net/114.114.114.114
 server=/jin10.com/114.114.114.114
 server=/jin10x.com/114.114.114.114
+server=/jinan-marathon.com/114.114.114.114
 server=/jinanguanggao.com/114.114.114.114
 server=/jinanhualian.com/114.114.114.114
 server=/jinanxww.com/114.114.114.114
