--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -56279,6 +56279,7 @@ server=/lyjyfw.net/114.114.114.114
 server=/lylhkq.com/114.114.114.114
 server=/lylme.com/114.114.114.114
 server=/lylxjxc.com/114.114.114.114
+server=/lymarathon.com/114.114.114.114
 server=/lymy1684.com/114.114.114.114
 server=/lynkco-test.com/114.114.114.114
 server=/lynkco.com/114.114.114.114
