--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79871,6 +79871,7 @@ server=/tryxue.com/114.114.114.114
 server=/ts-cooling.com/114.114.114.114
 server=/ts-jiabo.com/114.114.114.114
 server=/ts-juheng.com/114.114.114.114
+server=/ts-marathon.com/114.114.114.114
 server=/ts0775.com/114.114.114.114
 server=/ts100.com/114.114.114.114
 server=/ts166.net/114.114.114.114
