accelerated-domains: add huanggangmarathon.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42108,6 +42108,7 @@ server=/huangchun.net/114.114.114.114
 server=/huangdc.com/114.114.114.114
 server=/huangea.com/114.114.114.114
 server=/huangfusl.net/114.114.114.114
+server=/huanggangmarathon.com/114.114.114.114
 server=/huanggao.net/114.114.114.114
 server=/huanggaole.com/114.114.114.114
 server=/huangguanluo.com/114.114.114.114
