--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89876,6 +89876,7 @@ server=/xtrapowercn.com/114.114.114.114
 server=/xtrc.net/114.114.114.114
 server=/xtrunc.com/114.114.114.114
 server=/xtsfuke.com/114.114.114.114
+server=/xtszls.com/114.114.114.114
 server=/xttaff.com/114.114.114.114
 server=/xttblog.com/114.114.114.114
 server=/xttz.com/114.114.114.114
