accelerated-domains: add qpwater.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67404,6 +67404,7 @@ server=/qplus.com/114.114.114.114
 server=/qpoc.com/114.114.114.114
 server=/qpstar.com/114.114.114.114
 server=/qpvuqfha.com/114.114.114.114
+server=/qpwater.com/114.114.114.114
 server=/qpxiaoshuo.com/114.114.114.114
 server=/qpz.com/114.114.114.114
 server=/qpzq.net/114.114.114.114
