accelerated-domains: add taszls.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77596,6 +77596,7 @@ server=/tastespirit.com/114.114.114.114
 server=/tastientech.com/114.114.114.114
 server=/tastysteak.com/114.114.114.114
 server=/taswwx.com/114.114.114.114
+server=/taszls.com/114.114.114.114
 server=/tatatimes.com/114.114.114.114
 server=/tataxingqiu.com/114.114.114.114
 server=/tatazu.com/114.114.114.114
