--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -47965,6 +47965,7 @@ server=/jinjiang-group.com/114.114.114.114
 server=/jinjiang.com/114.114.114.114
 server=/jinjiang.tv/114.114.114.114
 server=/jinjianginns.com/114.114.114.114
+server=/jinjiangwater.com/114.114.114.114
 server=/jinjie.tech/114.114.114.114
 server=/jinjiedu.com/114.114.114.114
 server=/jinju8.com/114.114.114.114
