accelerated-domains: add kanlele.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50638,6 +50638,7 @@ server=/kankanzhijian.com/114.114.114.114
 server=/kanketv.com/114.114.114.114
 server=/kankezw.com/114.114.114.114
 server=/kankun-smartplug.com/114.114.114.114
+server=/kanlele.com/114.114.114.114
 server=/kanluzhe.com/114.114.114.114
 server=/kanman.com/114.114.114.114
 server=/kanmeinv.com/114.114.114.114
