accelerated-domains: add wzgytz.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86560,6 +86560,7 @@ server=/wzg0898.com/114.114.114.114
 server=/wzgemsmall.com/114.114.114.114
 server=/wzghy.com/114.114.114.114
 server=/wzgyjt.com/114.114.114.114
+server=/wzgytz.com/114.114.114.114
 server=/wzh.kim/114.114.114.114
 server=/wzhealth.com/114.114.114.114
 server=/wzhekou.com/114.114.114.114
