accelerated-domains: add bjszlsjt.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15142,6 +15142,7 @@ server=/bjsydq.com/114.114.114.114
 server=/bjsyqw.com/114.114.114.114
 server=/bjsytv.com/114.114.114.114
 server=/bjszhd.net/114.114.114.114
+server=/bjszlsjt.com/114.114.114.114
 server=/bjtcf.com/114.114.114.114
 server=/bjtcy.com/114.114.114.114
 server=/bjtdhkj.com/114.114.114.114
