--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74388,6 +74388,7 @@ server=/snkshoe.com/114.114.114.114
 server=/snkyat.com/114.114.114.114
 server=/snlxgk.com/114.114.114.114
 server=/snmi.com/114.114.114.114
+server=/snmxzls.com/114.114.114.114
 server=/snnd.co/114.114.114.114
 server=/snobten.com/114.114.114.114
 server=/snodehome.com/114.114.114.114
