accelerated-domains: add hnsyzls.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40951,6 +40951,7 @@ server=/hnsyda.com/114.114.114.114
 server=/hnsyhm.com/114.114.114.114
 server=/hnsyu.net/114.114.114.114
 server=/hnsyyq.com/114.114.114.114
+server=/hnsyzls.com/114.114.114.114
 server=/hnszn.com/114.114.114.114
 server=/hntbpm.com/114.114.114.114
 server=/hntchq.com/114.114.114.114
