--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98641,6 +98641,7 @@ server=/zsuan.com/114.114.114.114
 server=/zsucai.com/114.114.114.114
 server=/zsufivehos.com/114.114.114.114
 server=/zsvsz.com/114.114.114.114
+server=/zswater.com/114.114.114.114
 server=/zswcn.com/114.114.114.114
 server=/zswebao.shop/114.114.114.114
 server=/zswmailbox.com/114.114.114.114
