accelerated-domains: add kaolawenku.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50699,6 +50699,7 @@ server=/kaolacam.net/114.114.114.114
 server=/kaolacdn.com/114.114.114.114
 server=/kaolafm.com/114.114.114.114
 server=/kaolafm.net/114.114.114.114
+server=/kaolawenku.com/114.114.114.114
 server=/kaolazhengxin.com/114.114.114.114
 server=/kaom.net/114.114.114.114
 server=/kaonaw.com/114.114.114.114
