--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77406,6 +77406,7 @@ server=/tanyp.xyz/114.114.114.114
 server=/tanyu.mobi/114.114.114.114
 server=/tanyuan.space/114.114.114.114
 server=/tanyuantech.com/114.114.114.114
+server=/tanzhouwater.com/114.114.114.114
 server=/tao-che-wei.com/114.114.114.114
 server=/tao-jiujiu.com/114.114.114.114
 server=/tao-star.com/114.114.114.114
