accelerated-domains: add sczlsgs.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70819,6 +70819,7 @@ server=/sczgzb.com/114.114.114.114
 server=/sczht.com/114.114.114.114
 server=/sczl123.com/114.114.114.114
 server=/sczlhkj.com/114.114.114.114
+server=/sczlsgs.com/114.114.114.114
 server=/sczsfs.com/114.114.114.114
 server=/sczshz.net/114.114.114.114
 server=/sczsie.com/114.114.114.114
