--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22471,6 +22471,7 @@ server=/cpvjob.com/114.114.114.114
 server=/cpwlx.com/114.114.114.114
 server=/cpwzb.com/114.114.114.114
 server=/cpx8888.com/114.114.114.114
+server=/cpzls.com/114.114.114.114
 server=/cq-city.com/114.114.114.114
 server=/cq-ct.tech/114.114.114.114
 server=/cq-rongjia.com/114.114.114.114
