accelerated-domains: add jswater.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49432,6 +49432,7 @@ server=/jstzjy.net/114.114.114.114
 server=/jstzrcb.com/114.114.114.114
 server=/jsw118.com/114.114.114.114
 server=/jsw988.com/114.114.114.114
+server=/jswater.net/114.114.114.114
 server=/jswb.com/114.114.114.114
 server=/jswebcall.com/114.114.114.114
 server=/jsweixiu.com/114.114.114.114
