--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66266,6 +66266,7 @@ server=/qdzhengkang.com/114.114.114.114
 server=/qdzhongli.com/114.114.114.114
 server=/qdzixu.com/114.114.114.114
 server=/qdzkmj.com/114.114.114.114
+server=/qdzls.com/114.114.114.114
 server=/qdznjt.com/114.114.114.114
 server=/qdzx.net/114.114.114.114
 server=/qdzxyy.com/114.114.114.114
