--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39104,6 +39104,7 @@ server=/hbwlykt.com/114.114.114.114
 server=/hbww.org/114.114.114.114
 server=/hbxdf.com/114.114.114.114
 server=/hbxfxlqc.com/114.114.114.114
+server=/hbxgzls.com/114.114.114.114
 server=/hbxhxkj.com/114.114.114.114
 server=/hbxinfadi.com/114.114.114.114
 server=/hbxingchi.com/114.114.114.114
