--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93728,6 +93728,7 @@ server=/ypshengxian.com/114.114.114.114
 server=/ypshop.net/114.114.114.114
 server=/ypsjv.in/114.114.114.114
 server=/ypstech.com/114.114.114.114
+server=/ypwater.com/114.114.114.114
 server=/ypzdw.com/114.114.114.114
 server=/ypzhushou.com/114.114.114.114
 server=/yq-zc.com/114.114.114.114
