--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -47079,6 +47079,7 @@ server=/jhwvjjw.com/114.114.114.114
 server=/jhxcms.com/114.114.114.114
 server=/jhxl.org/114.114.114.114
 server=/jhxms.com/114.114.114.114
+server=/jhxzlsgs.com/114.114.114.114
 server=/jhydns05.com/114.114.114.114
 server=/jhygame.com/114.114.114.114
 server=/jhyhf.com/114.114.114.114
