--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -10862,6 +10862,7 @@ server=/alwindoor.com/114.114.114.114
 server=/alxw.com/114.114.114.114
 server=/alypw.com/114.114.114.114
 server=/alyzq.com/114.114.114.114
+server=/alzls.com/114.114.114.114
 server=/alzscl.com/114.114.114.114
 server=/am-sino.com/114.114.114.114
 server=/am1116.com/114.114.114.114
