--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43529,6 +43529,7 @@ server=/hzshudian.com/114.114.114.114
 server=/hzslgzx.com/114.114.114.114
 server=/hzsource.com/114.114.114.114
 server=/hzsqhb.com/114.114.114.114
+server=/hzsswjt.com/114.114.114.114
 server=/hzstad88.com/114.114.114.114
 server=/hzstar.com/114.114.114.114
 server=/hzstlzxyy.com/114.114.114.114
