accelerated-domains: add zmdwater.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98230,6 +98230,7 @@ server=/zmccx.com/114.114.114.114
 server=/zmclearing.com/114.114.114.114
 server=/zmctc.com/114.114.114.114
 server=/zmdfdc.com/114.114.114.114
+server=/zmdwater.com/114.114.114.114
 server=/zmdxy.com/114.114.114.114
 server=/zmdyzkgjt.com/114.114.114.114
 server=/zmdyzyey.com/114.114.114.114
