--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18089,6 +18089,7 @@ server=/cdzhuoyu.com/114.114.114.114
 server=/cdzimo.com/114.114.114.114
 server=/cdzixun.net/114.114.114.114
 server=/cdzjryb.com/114.114.114.114
+server=/cdzls.net/114.114.114.114
 server=/cdzongtian.com/114.114.114.114
 server=/cdzp8.com/114.114.114.114
 server=/cdzrjdgc.com/114.114.114.114
