--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43536,6 +43536,7 @@ server=/hzstad88.com/114.114.114.114
 server=/hzstar.com/114.114.114.114
 server=/hzstlzxyy.com/114.114.114.114
 server=/hzswysyy.com/114.114.114.114
+server=/hzszls.com/114.114.114.114
 server=/hzt2006.com/114.114.114.114
 server=/hzteaexpo.com/114.114.114.114
 server=/hztek.com/114.114.114.114
