--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80734,6 +80734,7 @@ server=/tzyiyuantuan.com/114.114.114.114
 server=/tzyun.com/114.114.114.114
 server=/tzyyao.com/114.114.114.114
 server=/tzzhkj.com/114.114.114.114
+server=/tzzls.com/114.114.114.114
 server=/tzzszb.com/114.114.114.114
 server=/u-cdn.com/114.114.114.114
 server=/u-lights.com/114.114.114.114
