--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -97566,6 +97566,7 @@ server=/ziboga.com/114.114.114.114
 server=/zibojinling.com/114.114.114.114
 server=/zibomarathon.com/114.114.114.114
 server=/zibonewbright.com/114.114.114.114
+server=/zibowater.com/114.114.114.114
 server=/zibozhongxue.com/114.114.114.114
 server=/zichenit.com/114.114.114.114
 server=/zicini.com/114.114.114.114
