--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -95603,6 +95603,7 @@ server=/zckb001.com/114.114.114.114
 server=/zckdwx.com/114.114.114.114
 server=/zclkj.com/114.114.114.114
 server=/zclock.xyz/114.114.114.114
+server=/zclqzls.com/114.114.114.114
 server=/zcmlc.com/114.114.114.114
 server=/zcmol.com/114.114.114.114
 server=/zcoa365.com/114.114.114.114
