--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78952,6 +78952,7 @@ server=/tjj.com/114.114.114.114
 server=/tjjfrh.com/114.114.114.114
 server=/tjjt360.com/114.114.114.114
 server=/tjjwt.com/114.114.114.114
+server=/tjjzzls.com/114.114.114.114
 server=/tjkache.com/114.114.114.114
 server=/tjkp-tools.com/114.114.114.114
 server=/tjkx.com/114.114.114.114
