--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89845,6 +89845,7 @@ server=/xsui.com/114.114.114.114
 server=/xswang.com/114.114.114.114
 server=/xswdcasting.com/114.114.114.114
 server=/xsxlt.com/114.114.114.114
+server=/xsxzls.com/114.114.114.114
 server=/xsy-edu.com/114.114.114.114
 server=/xsy.science/114.114.114.114
 server=/xsycps.com/114.114.114.114
