accelerated-domains: add tszlsgs.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79989,6 +79989,7 @@ server=/tsykf.com/114.114.114.114
 server=/tsyvps.com/114.114.114.114
 server=/tsyzm.com/114.114.114.114
 server=/tszhjk.com/114.114.114.114
+server=/tszlsgs.com/114.114.114.114
 server=/tszyzx.com/114.114.114.114
 server=/tt-app.com/114.114.114.114
 server=/tt-bike.com/114.114.114.114
