accelerated-domains: add knfeco.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51554,6 +51554,7 @@ server=/knewbi.com/114.114.114.114
 server=/knewone.com/114.114.114.114
 server=/knewsmart.com/114.114.114.114
 server=/kneyvz.xyz/114.114.114.114
+server=/knfeco.com/114.114.114.114
 server=/knight-un.com/114.114.114.114
 server=/knightli.com/114.114.114.114
 server=/knightyoung.asia/114.114.114.114
