--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46659,6 +46659,7 @@ server=/jcwgk.com/114.114.114.114
 server=/jcwgo.com/114.114.114.114
 server=/jcwjdg.com/114.114.114.114
 server=/jcwxiao.com/114.114.114.114
+server=/jcxzlsgs.com/114.114.114.114
 server=/jcyad.com/114.114.114.114
 server=/jcyai.com/114.114.114.114
 server=/jcyes.com/114.114.114.114
