accelerated-domains: add njpkwater.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61670,6 +61670,7 @@ server=/njnwyy.com/114.114.114.114
 server=/njnysoft.com/114.114.114.114
 server=/njnzrs.com/114.114.114.114
 server=/njodu.com/114.114.114.114
+server=/njpkwater.com/114.114.114.114
 server=/njpkzyy.com/114.114.114.114
 server=/njpud.com/114.114.114.114
 server=/njpujiang.com/114.114.114.114
