accelerated-domains: add baozi178.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13265,6 +13265,7 @@ server=/baozhuang.biz/114.114.114.114
 server=/baozhuangren.com/114.114.114.114
 server=/baozi.fun/114.114.114.114
 server=/baozi.run/114.114.114.114
+server=/baozi178.com/114.114.114.114
 server=/baozidu.com/114.114.114.114
 server=/baozifa.com/114.114.114.114
 server=/baozijishu.com/114.114.114.114
