accelerated-domains: add xzmai.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90032,6 +90032,7 @@ server=/xzlsqy.com/114.114.114.114
 server=/xzltzc.com/114.114.114.114
 server=/xzlzf.com/114.114.114.114
 server=/xzm56.com/114.114.114.114
+server=/xzmai.com/114.114.114.114
 server=/xzn56.com/114.114.114.114
 server=/xzoo.org/114.114.114.114
 server=/xzpf110.com/114.114.114.114
