--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66657,6 +66657,7 @@ server=/qiumeiapp.com/114.114.114.114
 server=/qiumibao.com/114.114.114.114
 server=/qiumijia.com/114.114.114.114
 server=/qiumiwu.com/114.114.114.114
+server=/qiupuwang.com/114.114.114.114
 server=/qiuqiusd.com/114.114.114.114
 server=/qiuquan.cc/114.114.114.114
 server=/qiushi.com/114.114.114.114
