--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -10347,6 +10347,7 @@ server=/ajyg.com/114.114.114.114
 server=/ajylqio.com/114.114.114.114
 server=/ak0.tw/114.114.114.114
 server=/ak03220hou.com/114.114.114.114
+server=/ak03230hou.com/114.114.114.114
 server=/ak1ak1.com/114.114.114.114
 server=/ak47ids.com/114.114.114.114
 server=/akaifa.com/114.114.114.114
