--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34307,6 +34307,7 @@ server=/gryu.net/114.114.114.114
 server=/grzmz.com/114.114.114.114
 server=/grzq.com/114.114.114.114
 server=/grzyfey.com/114.114.114.114
+server=/gs-cdn.com/114.114.114.114
 server=/gs090.com/114.114.114.114
 server=/gs12122.com/114.114.114.114
 server=/gs14.com/114.114.114.114
