--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9899,6 +9899,7 @@ server=/aiduwenxue.com/114.114.114.114
 server=/aiec-alliance.com/114.114.114.114
 server=/aieco.org/114.114.114.114
 server=/aiecoms.com/114.114.114.114
+server=/aiegde.com/114.114.114.114
 server=/aiegle.com/114.114.114.114
 server=/aiema.com/114.114.114.114
 server=/aiemy.com/114.114.114.114
