accelerated-domains: add biquge.io

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14611,6 +14611,7 @@ server=/biqudu.tv/114.114.114.114
 server=/biqufu.com/114.114.114.114
 server=/biqugao.cc/114.114.114.114
 server=/biquge.info/114.114.114.114
+server=/biquge.io/114.114.114.114
 server=/biquge.la/114.114.114.114
 server=/biquge.vip/114.114.114.114
 server=/biquge365.com/114.114.114.114
