accelerated-domains: add 80txt.cc

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -7367,6 +7367,7 @@ server=/80sjy.net/114.114.114.114
 server=/80srz.com/114.114.114.114
 server=/80test.com/114.114.114.114
 server=/80tian.com/114.114.114.114
+server=/80txt.cc/114.114.114.114
 server=/80txt.com/114.114.114.114
 server=/80txt.la/114.114.114.114
 server=/80vps.com/114.114.114.114
