--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58925,6 +58925,7 @@ server=/momoyuyouxi.com/114.114.114.114
 server=/momself.club/114.114.114.114
 server=/momzs.com/114.114.114.114
 server=/monaite.com/114.114.114.114
+server=/moneak.com/114.114.114.114
 server=/monengu.com/114.114.114.114
 server=/monengugame.com/114.114.114.114
 server=/moneydata.hk/114.114.114.114
