--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -6342,6 +6342,7 @@ server=/62zd0.icu/114.114.114.114
 server=/6300.net/114.114.114.114
 server=/630book.cc/114.114.114.114
 server=/630book.co/114.114.114.114
+server=/630zw.org/114.114.114.114
 server=/6318537ccc.com/114.114.114.114
 server=/631r.xyz/114.114.114.114
 server=/63243.com/114.114.114.114
