--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50341,6 +50341,7 @@ server=/kanong.com/114.114.114.114
 server=/kanongyun.com/114.114.114.114
 server=/kanqibao.com/114.114.114.114
 server=/kanqiye.com/114.114.114.114
+server=/kanqizw.com/114.114.114.114
 server=/kanqq.com/114.114.114.114
 server=/kanqu.com/114.114.114.114
 server=/kanrang.com/114.114.114.114
