--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40948,6 +40948,7 @@ server=/hnsoftedu.com/114.114.114.114
 server=/hnsong.net/114.114.114.114
 server=/hnsqtg.com/114.114.114.114
 server=/hnsrmyy.com/114.114.114.114
+server=/hnsrmyy.net/114.114.114.114
 server=/hnssyxx.com/114.114.114.114
 server=/hnst.org/114.114.114.114
 server=/hnstguolu.net/114.114.114.114
