--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76303,6 +76303,7 @@ server=/sxww.com/114.114.114.114
 server=/sxxdll.com/114.114.114.114
 server=/sxxjdz.com/114.114.114.114
 server=/sxxl.com/114.114.114.114
+server=/sxxrmyy.com/114.114.114.114
 server=/sxxsmjh.com/114.114.114.114
 server=/sxxt.net/114.114.114.114
 server=/sxxtong.com/114.114.114.114
