accelerated-domains: add hzsdlrmyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43526,6 +43526,7 @@ server=/hzsaifang.com/114.114.114.114
 server=/hzsanjiaomao.com/114.114.114.114
 server=/hzsaso.com/114.114.114.114
 server=/hzsbz.com/114.114.114.114
+server=/hzsdlrmyy.com/114.114.114.114
 server=/hzsdyfzfxxx.com/114.114.114.114
 server=/hzsgjj.com/114.114.114.114
 server=/hzsh666.com/114.114.114.114
