--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46684,6 +46684,7 @@ server=/jd-df.com/114.114.114.114
 server=/jd-ex.com/114.114.114.114
 server=/jd-ex.net/114.114.114.114
 server=/jd-fm.com/114.114.114.114
+server=/jd-hospital.com/114.114.114.114
 server=/jd-link.com/114.114.114.114
 server=/jd-zd.com/114.114.114.114
 server=/jd.co/114.114.114.114
