accelerated-domains: add qdsrmyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66251,6 +66251,7 @@ server=/qdshirunpackage.com/114.114.114.114
 server=/qdshoufei.com/114.114.114.114
 server=/qdshuiche.com/114.114.114.114
 server=/qdslcs.com/114.114.114.114
+server=/qdsrmyy.com/114.114.114.114
 server=/qdsxtkj.com/114.114.114.114
 server=/qdsysj.com/114.114.114.114
 server=/qdtech.ai/114.114.114.114
