accelerated-domains: add zhmedcenter.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96978,6 +96978,7 @@ server=/zhltech.net/114.114.114.114
 server=/zhltraffic.com/114.114.114.114
 server=/zhlyen.com/114.114.114.114
 server=/zhlzw.com/114.114.114.114
+server=/zhmedcenter.com/114.114.114.114
 server=/zhmeiwen.com/114.114.114.114
 server=/zhmf.com/114.114.114.114
 server=/zhmfqm.com/114.114.114.114
