accelerated-domains: add gasrmyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32435,6 +32435,7 @@ server=/gasfw.com/114.114.114.114
 server=/gasgoo.com/114.114.114.114
 server=/gashr.com/114.114.114.114
 server=/gaspeedup.com/114.114.114.114
+server=/gasrmyy.com/114.114.114.114
 server=/gasshow.com/114.114.114.114
 server=/gastronomy.gov.mo/114.114.114.114
 server=/gasxf.com/114.114.114.114
