accelerated-domains: add mzsdsyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60384,6 +60384,7 @@ server=/mzqbt.com/114.114.114.114
 server=/mzread.com/114.114.114.114
 server=/mzres.com/114.114.114.114
 server=/mzrmyy.com/114.114.114.114
+server=/mzsdsyy.com/114.114.114.114
 server=/mzsky.cc/114.114.114.114
 server=/mzsmn.com/114.114.114.114
 server=/mzssysmyxgs.com/114.114.114.114
