accelerated-domains: add nyd7y.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62770,6 +62770,7 @@ server=/nybai.com/114.114.114.114
 server=/nybaidu.net/114.114.114.114
 server=/nybw.net/114.114.114.114
 server=/nyckidsclub.com/114.114.114.114
+server=/nyd7y.com/114.114.114.114
 server=/nydsrrsh.com/114.114.114.114
 server=/nyefy.com/114.114.114.114
 server=/nyfzx.com/114.114.114.114
