--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40793,6 +40793,7 @@ server=/hndbsp.com/114.114.114.114
 server=/hndca.com/114.114.114.114
 server=/hndeguang.com/114.114.114.114
 server=/hndfbg.com/114.114.114.114
+server=/hndfsrmyy.com/114.114.114.114
 server=/hndhsyjt.com/114.114.114.114
 server=/hndlks.com/114.114.114.114
 server=/hndmtjc.com/114.114.114.114
