accelerated-domains: add lanlinghospital.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52792,6 +52792,7 @@ server=/lankecloud.com/114.114.114.114
 server=/lankeji.com/114.114.114.114
 server=/lanlanlife.com/114.114.114.114
 server=/lanlanwork.com/114.114.114.114
+server=/lanlinghospital.com/114.114.114.114
 server=/lanlv.com/114.114.114.114
 server=/lanmao.com/114.114.114.114
 server=/lanmao88.hk/114.114.114.114
