accelerated-domains: add fyrmyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31942,6 +31942,7 @@ server=/fynas.com/114.114.114.114
 server=/fynews.net/114.114.114.114
 server=/fyrcbk.com/114.114.114.114
 server=/fyrexian.com/114.114.114.114
+server=/fyrmyy.com/114.114.114.114
 server=/fyrwzz.com/114.114.114.114
 server=/fysfzk.com/114.114.114.114
 server=/fysjbj.com/114.114.114.114
