accelerated-domains: add sanfinehospital.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70236,6 +70236,7 @@ server=/sanfen666.com/114.114.114.114
 server=/sanfengyun.com/114.114.114.114
 server=/sanfer.com/114.114.114.114
 server=/sanfi.com/114.114.114.114
+server=/sanfinehospital.com/114.114.114.114
 server=/sanfo.com/114.114.114.114
 server=/sanfu.com/114.114.114.114
 server=/sang.pub/114.114.114.114
