accelerated-domains: add ywfby.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94901,6 +94901,7 @@ server=/ywclxp.com/114.114.114.114
 server=/ywdier.com/114.114.114.114
 server=/ywditan315.com/114.114.114.114
 server=/yweisugar.com/114.114.114.114
+server=/ywfby.com/114.114.114.114
 server=/ywgd.com/114.114.114.114
 server=/ywhack.com/114.114.114.114
 server=/ywhqs.com/114.114.114.114
