accelerated-domains: add zzslyy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99389,6 +99389,7 @@ server=/zzsh21.com/114.114.114.114
 server=/zzshe.com/114.114.114.114
 server=/zzsiji.com/114.114.114.114
 server=/zzsin.com/114.114.114.114
+server=/zzslyy.com/114.114.114.114
 server=/zzspider.com/114.114.114.114
 server=/zzsspnode.com/114.114.114.114
 server=/zzssptop.com/114.114.114.114
