--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9744,6 +9744,7 @@ server=/ahs.pub/114.114.114.114
 server=/ahscl.com/114.114.114.114
 server=/ahscxyy.com/114.114.114.114
 server=/ahsea.com/114.114.114.114
+server=/ahsfdxrmyy.com/114.114.114.114
 server=/ahsj-group.com/114.114.114.114
 server=/ahsjxjy.com/114.114.114.114
 server=/ahslxzj.com/114.114.114.114
