--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30842,6 +30842,7 @@ server=/fjptzx.com/114.114.114.114
 server=/fjptzyt.com/114.114.114.114
 server=/fjq.icu/114.114.114.114
 server=/fjqionghai.com/114.114.114.114
+server=/fjrmyy.com/114.114.114.114
 server=/fjsdn.com/114.114.114.114
 server=/fjsen.com/114.114.114.114
 server=/fjsfa.org/114.114.114.114
