accelerated-domains: add szrch.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76943,6 +76943,7 @@ server=/szqushi.com/114.114.114.114
 server=/szqyw.net/114.114.114.114
 server=/szqzsd.com/114.114.114.114
 server=/szrcfw.com/114.114.114.114
+server=/szrch.com/114.114.114.114
 server=/szrfdq.com/114.114.114.114
 server=/szrfstar.com/114.114.114.114
 server=/szrhjx.com/114.114.114.114
