--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51858,6 +51858,7 @@ server=/ksren.com/114.114.114.114
 server=/ksrenfan.com/114.114.114.114
 server=/ksria.com/114.114.114.114
 server=/ksrmtzx.com/114.114.114.114
+server=/ksrmyy.org/114.114.114.114
 server=/ksrsy.com/114.114.114.114
 server=/ksruanjian.com/114.114.114.114
 server=/kss4.com/114.114.114.114
